index.html insert some information and CC and some css file

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        
     </head>
     <body>
         <h1 id="title">사이버 세상의 새로운 가능성을 열어갑니다.</h1>
-        <h2 id="descirption">-별이봇 개발부-</h2>
-        <footer>(C) 2021 Bure-i Bot Dev.Studios not reserved.</footer>
+        <h2 id="description">-별이봇 개발부-</h2>
+        <footer>(C) 2021 SKY Bot Dev.Studios</footer>
     </body>
 </html>
