--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./SiteCSSs/style.css">
     </head>
     <body>
+        <p> <a href = "https://www.digncore.xyz" target = "_self">Digncore 웹사이트</a></p>
         <h1 id="title">사이버 세상의 새로운 가능성을 열어갑니다.</h1>
         <h2 id="description">-별이봇 개발부-</h2>
         <footer>(C) 2021 SKY Bot Dev.Studios</footer>
+        <nav class="navbar">
+            <div class="navbar__logo">
+
+            </div>
+            
+            <div class="navbar__menu">
+
+            </div>
+
+            <div class="navbar__links">
+                
+            </div>
+        </nav>
     </body>
 </html>
