--- a/team-info.html
+++ b/team-info.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="./SiteCSSs/notice.css"/>
-        <title>별이봇 개발부 공식사이트| 공지사항</title>
+        <title>별이봇 개발부 공식사이트| 팀 소식</title>
         <script src="https://kit.fontawesom.com/2d323a629b.js" crossorigin="anonymous"></script>
     </head>
 
@@ -16,7 +16,8 @@
             <ul class="navbar__menu">
                 <li><a href="index.html">홈</a></li>
                 
-                <li><a href="team-info.html">팀 소식</a></li>
+                <li><a href="">홈</a></li>
+                <li><a href="">공지사항</a></li>
                 <li><a href="">별이 소식</a></li>
                 <li><a href="">기타 소식통</a></li>
             </ul>
@@ -25,8 +26,8 @@
 
             </ul>
         </nav>
-        <h1 id="title-text">공지사항</h1>
-        <div id="updates">할당된 업데이트 없음.</div>
+        <h1 id="title-text">팀 소식</h1>
+        <div id="updates">별이봇 개발부의 공식 사이트인 studio.buri.digncore.xyz를 런칭하였습니다.</div>
         
     </body>
 </html>
