--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="./SiteCSSs/style.css">
         <script src="https://kit.fontawesome.com/94df662920.js" crossorigin="anonymous"></script>
+        <title>별이봇 개발부 공식 사이트| 메인 홈</title>
     </head>
     <body>
         
