mobile and tab device System upgraded

--- a/team-info.html
+++ b/team-info.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="./SiteCSSs/notice.css"/>
         <title>별이봇 개발부 공식사이트| 팀 소식</title>
         <script src="https://kit.fontawesom.com/2d323a629b.js" crossorigin="anonymous"></script>
