--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width">
         <meta charset="utf-8">
         <link rel="stylesheet" href="./SiteCSSs/style.css">
         <script src="https://kit.fontawesome.com/94df662920.js" crossorigin="anonymous"></script>
