--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </ul>
         </nav>
         
+        <nav>
         <h1 id="title">사이버 세상의 새로운 가능성을 열어갑니다.</h1>
         <h2 id="description">-별이봇 개발부-</h2>
         <footer>(C) 2021 SKY Bot Dev.Studios</footer>
@@ -36,7 +37,7 @@
         </nav>
 
         <!--
-            왜 안돼.....
+            왜 안돼.....?
         -->
     </body>
 </html>
