--- a/notice.html
+++ b/notice.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="./SiteCSSs/notice.css"/>
         <title>별이봇 개발부 공식사이트| 공지사항</title>
-        <script src="https://kit.fontawesom.com/2d323a629b.js" crossorigin="anonymous"></script>
+        
     </head>
 
     <body>
@@ -18,8 +18,8 @@
                 <li><a href="index.html">홈</a></li>
                 
                 <li><a href="team-info.html">팀 소식</a></li>
-                <li><a href="">별이 소식</a></li>
-                <li><a href="">기타 소식통</a></li>
+                <li><a href="burinews.html">별이 소식</a></li>
+                <li><a href="aboutnews.html">기타 소식통</a></li>
             </ul>
 
             <ul class="navbar__links">
