--- a/team-info.html
+++ b/team-info.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="./SiteCSSs/notice.css"/>
         <title>별이봇 개발부 공식사이트| 팀 소식</title>
-        <script src="https://kit.fontawesom.com/2d323a629b.js" crossorigin="anonymous"></script>
+        
     </head>
 
     <body>
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <h1 id="title-text">팀 소식</h1>
-        <div id="updates">별이봇 개발부의 공식 사이트인 studio.buri.digncore.xyz를 런칭하였습니다.</div>
+        <div id="updates">[2021-05-22] 별이봇 개발부의 공식 사이트인 studio.buri.digncore.xyz를 런칭하였습니다.</div>
         
     </body>
 </html>
