underbar is updated in web

--- a/team-info.html
+++ b/team-info.html
@@ -17,10 +17,11 @@
             <ul class="navbar__menu">
                 <li><a href="index.html">홈</a></li>
                 
-                <li><a href="">홈</a></li>
-                <li><a href="">공지사항</a></li>
-                <li><a href="">별이 소식</a></li>
-                <li><a href="">기타 소식통</a></li>
+                <li><a href="team-info.html">팀 소식</a></li>
+                <li><a href="notice.html">공지사항</a></li>
+                <li><a href="burinews.html">별이 소식</a></li>
+                <li><a href="aboutnews.html">기타 소식통</a></li>
+                <li><a href="https://www.digncore.xyz/"></a>팀 사이트</li>
             </ul>
 
             <ul class="navbar__links">
