--- a/aboutnews.html
+++ b/aboutnews.html
@@ -16,6 +16,10 @@
             <ul class="navbar__menu">
                 <li><a href="index.html">홈</a></li>
                 <li><a href="notice.html">공지사항</a></li>
+                <li><a href="team-info.html">팀 소식</a></li>
+                <li><a href="burinews.html">별이 뉴스</a></li>
+                <li><a href="aboutnews.html">기타 소식통</a></li>
+                <li><a href="https://www.digncore.xyz/">팀 사이트</a></li>
             </ul>
         </nav>
     </body>
