--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
 
         <div class="under_bar">
-
+            <div>총 책임자 연락처: Discord 하늘#7144 </div>
         </div>
     </body>
 </html>
