--- a/team-info.html
+++ b/team-info.html
@@ -21,7 +21,7 @@
                 <li><a href="notice.html">공지사항</a></li>
                 <li><a href="burinews.html">별이 소식</a></li>
                 <li><a href="aboutnews.html">기타 소식통</a></li>
-                <li><a href="https://www.digncore.xyz/"></a>팀 사이트</li>
+                <li><a href="https://www.digncore.xyz/">팀 사이트</a></li>
             </ul>
 
             <ul class="navbar__links">
