some mobile device site UI Error

--- a/aboutnews.html
+++ b/aboutnews.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8">
         <link rel="stylesheet" href="SiteCSSs/about.css">
-        <title></title>
+        <title>별이봇 개발부 공식사이트| 기타 소식통</title>
     </head>
     <body>
         <nav class="navbar">
