--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width">
-        
+        <meta charset="utf-8"/>
         <link rel="stylesheet" href="./SiteCSSs/style.css">
         
         <title>별이봇 개발부 공식 사이트| 메인 홈</title>
