system is lunched for clocks!

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="burinews.html">별이 소식</a></li>
                 <li><a href="aboutnews.html">기타 소식통</a></li>
                 <li><a href="https://www.digncore.xyz/">팀 사이트</a></li>
+                <li><a href="clock.html">시계</a></li>
             </ul>
 
             <ul class="navbar__links">
