--- a/clock.html
+++ b/clock.html
@@ -8,19 +8,15 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="navbar__logo">
-            <a href=""></a>
-        </div>
-
-        <ul class="navbar__menu">
-            <li><a href="notice.html">공지사항</a></li>
-            <li><a href="team-info.html">팀 소식</a></li>
-            <li><a href="burinews.html">별이 소식</a></li>
-            <li><a href="https://www.digncore.xyz/">팀 사이트</a></li>
-            <li><a href="aboutnews.html">기타 소식통</a></li>
-        </ul>
-    </nav>
+    <ul class="navbar__menu">
+        <li><a href="notice.html">공지사항</a></li>
+        <li><a href="team-info.html">팀 소식</a></li>
+        <li><a href="burinews.html">별이 소식</a></li>
+        <li><a href="aboutnews.html">기타 소식통</a></li>
+        <li><a href="https://www.digncore.xyz/">팀 사이트</a></li>
+        <li><a href="clock.html">시계</a></li>
+    </ul>
+    
     <div class="jsclock">
         <h1>00:00</h1>
     </div>
