--- a/aboutnews.html
+++ b/aboutnews.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar">
             <div class="navbar__logo">
-
+                
                 <a href=""></a>
             </div>
 
@@ -24,5 +24,8 @@
 
             
         </nav>
+        <h1 id="title-text">기타뉴스</h1>
+        <h2 id="whatsnew?">아직 새로운 뉴스가 등록되지 않았어요.</h2>
+        <footer id="CC">(C) Bure-i bot dev.Studios 별이봇 개발부 2021 not deserved.</footer>
     </body>
 </html>
