--- a/notice.html
+++ b/notice.html
@@ -27,7 +27,9 @@
             </ul>
         </nav>
         <h1 id="title-text">공지사항</h1>
-        <div id="updates">할당된 업데이트 없음.</div>
+        <div id="updates">[ 2021 05 28 별이봇 개발부 공식사이트] 별이봇 개발부의 공식홈페이지 디자인 에러가 개선되었습니다 </div>
+        <div id="updates02">별이봇의 초대시스템이 기존 사이트인 buri.digncore,xyz/에서 별이봇 개발부 웹사이트인 현재 사이트의 봇란으로 이동될 예정입니다</div>
+        
         
     </body>
 </html>
