--- a/team-info.html
+++ b/team-info.html
@@ -30,6 +30,7 @@
         </nav>
         <h1 id="title-text">팀 소식</h1>
         <div id="updates">[2021-05-22] 별이봇 개발부의 공식 사이트인 studio.buri.digncore.xyz를 런칭하였습니다.</div>
+        <div id="botsUpdate">[2021-05-28] 기존의 초대서비스를 별이봇 개발부 공식홈페이지로 이동시켜 혼란이 발생하지 않도록 하였고 초대서비스 UI/UX가 개선되었습니다</div>
         
     </body>
 </html>
