--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <h1 id="title">사이버 세상의 새로운 가능성을 열어갑니다.</h1>
         <h2 id="description">-별이봇 개발부-</h2>
+        <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image">
         <footer>(C) 2021 SKY Bot Dev.Studios</footer>
         
         </nav>
