--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <div class="navbar__logo">
 
-                <a href=""></a>
+                <a href="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png">Buri Bot Dev.Studios</a>
             </div>
 
             <ul class="navbar__menu">
@@ -30,14 +30,15 @@
 
         <h1 id="title">사이버 세상의 새로운 가능성을 열어갑니다.</h1>
         <h2 id="description">-별이봇 개발부-</h2>
-        <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image">
+        <div id="sliderFrame">
+            <div class="slider">
+                <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image">
+            </div>
+        </div>
         <footer>(C) 2021 SKY Bot Dev.Studios</footer>
-        
-        </nav>
-        
         <div class="under_bar">
             <div>총 책임자 연락처: Discord 하늘#7144 </div>
         </div>
-   
+
     </body>
 </html>
