website disyn update is a deployed

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
         <nav class="navbar">
             <div class="navbar__logo">
-
-                <a href="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png">Buri Bot Dev.Studios</a>
+                <a href="htttps://studio.buri.digncore.xyz/"><img class="navbar_logo2" src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image"></a>
             </div>
 
             <ul class="navbar__menu">
@@ -27,12 +26,19 @@
             <ul class="navbar__links">
             </ul>
         </nav>
-
         <h1 id="title">사이버 세상의 새로운 가능성을 열어갑니다.</h1>
         <h2 id="description">-별이봇 개발부-</h2>
-        <div id="sliderFrame">
-            <div class="slider">
-                <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image">
+        <div id="wrapper">
+            <div class="slider-wrap">
+                <ul id="slider">
+                    <li>
+                        <div>
+                            <h3>사이버 세상의 새로운 가능성을 열어갑니다.</h3>
+                            <span>-별이봇 개발부-</span>
+                        </div>
+                        <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image">
+                    </li>
+                </ul>
             </div>
         </div>
         <footer>(C) 2021 SKY Bot Dev.Studios</footer>
