--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="./SiteCSSs/style.css">
+        <script type="text/javascript" src="./slider.js"></script>
         
         <title>별이봇 개발부 공식 사이트| 메인 홈</title>
     </head>
@@ -28,18 +29,16 @@
         </nav>
         <h1 id="title">사이버 세상의 새로운 가능성을 열어갑니다.</h1>
         <h2 id="description">-별이봇 개발부-</h2>
-        <div id="wrapper">
-            <div class="slider-wrap">
-                <ul id="slider">
-                    <li>
-                        <div>
-                            <h3>사이버 세상의 새로운 가능성을 열어갑니다.</h3>
-                            <span>-별이봇 개발부-</span>
-                        </div>
-                        <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image">
-                    </li>
-                </ul>
+        <div class="slideshow-container">
+            <div class="mySlides fade">
+                <div class="numbertext">1/1</div>
+                <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image">
+                <div class="text">
+                    <h3>사이버 세상의 새로운 가능성을 열어갑니다.</h3>
+                    <span>-별이봇 개발부-</span>
+                </div>
             </div>
+
         </div>
         <footer>(C) 2021 SKY Bot Dev.Studios</footer>
         <div class="under_bar">
