--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1/1</div>
-                <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image">
+                <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image" class="slide_img">
                 <div class="text">
                     <h3>사이버 세상의 새로운 가능성을 열어갑니다.</h3>
                     <span>-별이봇 개발부-</span>
