--- a/burinews.html
+++ b/burinews.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="navbar__logo">
 
-            <a href="htttps://studio.buri.digncore.xyz/">Buri Bot Dev.Studios</a>
+            <a href="https://studio.buri.digncore.xyz/">Buri Bot Dev.Studios</a>
         </div>
 
         <ul class="navbar__menu">
