--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="./SiteCSSs/style.css">
-        <script type="text/javascript" src="./slider.js"></script>
+        <script type="text/javascript" src="./SiteJSes/slider.js"></script>
         
         <title>별이봇 개발부 공식 사이트| 메인 홈</title>
     </head>
@@ -31,15 +31,21 @@
         <h2 id="description">-별이봇 개발부-</h2>
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <div class="img">
-                    <div class="content">
-                        <h1 id="title">사이버 세상의 새로운 가능성을 열어갑니다.</h1>
-                        <h2 id="description">-별이봇 개발부-</h2>
-                    </div>
-                    <div class="img-cover"></div>
+                <div class="numbertext">1/2</div>
+                <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image" class="slide_img">
+                <div class="text">
+                    <h3>사이버 세상의 새로운 가능성을 열어갑니다.</h3>
+                    <span>-별이봇 개발부-</span>
                 </div>
             </div>
-
+            <div class="mySlides fade">
+                <div class="numbertext">2/2</div>
+                <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image" class="slide_img">
+                <div class="text">
+                    <h3>사이버 세상의 새로운 가능성을 열어갑니다2.</h3>
+                    <span>-별이봇 개발부2-</span>
+                </div>
+            </div>
         </div>
         <footer>(C) 2021 SKY Bot Dev.Studios</footer>
         <div class="under_bar">
