--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                 </div>
             </div>
         </div>
+        <br>
+        <div style="text-align:center">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
         <footer>(C) 2021 SKY Bot Dev.Studios</footer>
         <div class="under_bar">
             <div>총 책임자 연락처: Discord 하늘#7144 </div>
