--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <nav class="navbar">
             <div class="navbar__logo">
-                <a href="htttps://studio.buri.digncore.xyz/"><img class="navbar_logo2" src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image"></a>
+                <a href="https://studio.buri.digncore.xyz/"><img class="navbar_logo2" src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image"></a>
             </div>
 
             <ul class="navbar__menu">
@@ -48,7 +48,6 @@
         </div>
         <br>
         <div style="text-align:center">
-            <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
         </div>
