fetch to fetchnote?

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="navbar__links">
             </ul>
         </nav>
-        <h1 id="title">사이버 세상의 새로운 가능성을 열어갑니다.</h1>
+        <h1 id="title">저희 별이봇 개발부는 의미 있는 도전을 하기 위해 노력합니다.</h1>
         <h2 id="description">-별이봇 개발부-</h2>
         <div class="slideshow-container">
             <div class="mySlides fade">
@@ -34,15 +34,15 @@
                 <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image" class="slide_img">
                 <div class="text">
                     <h3>사이버 세상의 새로운 가능성을 열어갑니다.</h3>
-                    <span>-별이봇 개발부-</span>
+                    <span>-별이봇 개발부- page 2 of 1</span>
                 </div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">2/2</div>
                 <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image" class="slide_img">
                 <div class="text">
-                    <h3>사이버 세상의 새로운 가능성을 열어갑니다2.</h3>
-                    <span>-별이봇 개발부2-</span>
+                    <h3>사이버 세상의 새로운 가능성을 열어갑니다.</h3>
+                    <span>-별이봇 개발부- page 2 of 2</span>
                 </div>
             </div>
         </div>
