--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
             <ul class="navbar__links">
             </ul>
         </nav>
-        <h1 id="title">저희 별이봇 개발부는 의미 있는 도전을 하기 위해 노력합니다.</h1>
+        <h1 id="title">사이버세상의 새로운 가능성을 열어갑니다.</h1>
         <h2 id="description">-별이봇 개발부-</h2>
+        <div class="description_for_team">저희 별이봇 개발부는 의미있는 도전을 하기 위해 노력하는 팀입니다.</div>
+        <div class="des">사이버 생활에 이로운 영향을 끼치는것들을 만들고 발전시킵니다.</div>
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1/2</div>
