--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
 
             <ul class="navbar__links">
             </ul>
-        </nav>
-        <h1 id="title">사이버세상의 새로운 가능성을 열어갑니다.</h1>
-        <h2 id="description">-별이봇 개발부-</h2>
-        <div class="description_for_team">저희 별이봇 개발부는 의미있는 도전을 하기 위해 노력하는 팀입니다.</div>
-        <div class="des">사이버 생활에 이로운 영향을 끼치는것들을 만들고 발전시킵니다.</div>
+        </nav>     
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1/2</div>
@@ -41,10 +37,10 @@
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">2/2</div>
-                <img src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image" class="slide_img">
+                <img src="https://cdn.discordapp.com/attachments/724586073220579408/848063380097859605/blue-skies-filled-of-stars-abstract.jpg" alt="image" class="slide_img">
                 <div class="text">
-                    <h3>사이버 세상의 새로운 가능성을 열어갑니다.</h3>
-                    <span>-별이봇 개발부- page 2 of 2</span>
+                    <div class="description_for_team">저희 별이봇 개발부는 의미있는 도전을 하기 위해 노력하는 팀입니다.</div>
+                    <div class="des">사이버 생활에 이로운 영향을 끼치는것들을 만들고 발전시킵니다.</div>
                 </div>
             </div>
         </div>
@@ -53,9 +49,9 @@
             <span class="dot"></span>
             <span class="dot"></span>
         </div>
-        <footer>(C) 2021 SKY Bot Dev.Studios</footer>
         <div class="under_bar">
-            <div>총 책임자 연락처: Discord 하늘#7144 </div>
+            <div class="discord_tag">총 책임자 연락처: Discord 하늘#7144 </div>
+            <footer>(C) 2021 SKY Bot Dev.Studios</footer>
         </div>
         <script type="text/javascript" src="./SiteJSes/slider.js"></script>
     </body>
