--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <br>
-        <div style="text-align:center">
+        <div>
             <span class="dot"></span>
             <span class="dot"></span>
         </div>
