--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             <span class="dot"></span>
             <span class="dot"></span>
         </div>
+        <div class="explain">
+            <h1>별이봇</h1>
+            <h2>Q.별이는 어떤 봇인가요?</h2>
+            <h2>A.별이봇은 사용자 여러분이 계시는 모든 서버의 안전과 편리를 보장하는 서버보안/대화봇입니다.</h2>
+            <h2>Q.별이를 사용하는 이유는 무엇인가요?</h2>
+            <h2>A.다른봇과 달리 대화기능과 보안기능을 동시에 탑제하였습니다 그 이외에도 별이봇 개발부에서는 유저여러분의 소중한 의견을 반영하여 별이봇을 더 편리한 봇으로 개발해 나갑니다.</h2>
+        </div>
         <div class="under_bar">
             <div class="discord_tag">총 책임자 연락처: Discord 하늘#7144 </div>
             <footer>(C) 2021 SKY Bot Dev.Studios</footer>
