--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <div class="navbar__logo">
                 <a href="https://studio.buri.digncore.xyz/"><img class="navbar_logo2" src="https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png" alt="image"></a>
-                <div>SKY Bot Dev.Studios</div>
+                <p class="left_logo">SKY Bot Dev.Studios</p>
             </div>
 
             <ul class="navbar__menu">
