Site Dysine and System upgraded for android and ios

--- a/FAQ.html
+++ b/FAQ.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
 <html>
     <head>
-        <meta name="veiwport" content="width=device.width"/>
-        <meta charset="utf-8"/>
-        <link rel="stylesheet" href="./SiteCSSs/FAQ.css"/>
-        <title>별이봇 개발부| FAQ(자주 묻는 질문)</title>
+        <title>별이봇 개발부 공식 웹사이트 | FAQ(자주 묻는 질문)</title>
+        <script src="backend/comment.js"></script>
+        <link rel="stylesheet" href="./SiteCSSs/FAQ.css" />
+
     </head>
     <body>
         
+        <h1 class="FAQ_Num1">별이봇은 어떤 봇인가요?</h1>
+        <h2 class="FAQ_Num1_answer">별이봇은 서버의 보안 및 유틸리티와 다양한 기능들을 제공하는 봇입니다.</h2>
     </body>
 </html>
