--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><i class="fab fa-discord"></i></li>                
             </ul>
             <a href="#" class="navbar__toogleBtn">
-                <i class="fab fa-bars"></i>
+                <!--<i class="fab fa-bars"></i>-->
             </a>
         </nav>     
         <div class="slideshow-container">
