js File is some fetch are apployed

--- a/version.html
+++ b/version.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="SiteCSSs/version.css">
         <meta name="viewport" content="width=device-width">
         <title>별이봇 개발부 공식 웹사이트 | 버전 확인</title>
-        <script src="./backend/botTagchecck.js"></script>
+        <script src="./backend/botTagchecck.js" defer></script>
     </head>
     <body>
         <div class="gif">
