Not for update IE

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatable" content="ie=edge">
         <link rel="stylesheet" href="./SiteCSSs/style.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
         
