--- a/version.html
+++ b/version.html
@@ -4,15 +4,17 @@
         <link rel="stylesheet" href="SiteCSSs/version.css">
         <meta name="viewport" content="width=device-width">
         <title>별이봇 개발부 공식 웹사이트 | 버전 확인</title>
-        <script src="./backend/botTagchecck.js" defer></script>
+        
     </head>
     <body>
         <div class="gif">
             <img src="img/pleaseWait.gif" alt="typing">
         </div>
         <div class="Please_wait_text">
-            <h1>잠시만 기다려주세요</h1>
-            <h1>Please wait</h1>    
+            <h1>아래 입력란에 봇의 태그(닉네임 포함), ID을(를) 적어주세요</h1>
+        </div>
+        <div class="check_input">
+            <input type="value">
         </div>
     </body>
 </html>
